cmake_minimum_required(VERSION 3.24)
project(ch07)

set(CMAKE_CXX_STANDARD 17)
set(OpenCV_DIR /usr/local/share/OpenCV)
find_package(OpenCV REQUIRED)
#include_directories(${OpenCV_INCLUDE_DIRS})
#include_directories(${Pangolin_INCLUDE_DIRS})
add_executable(orb_cv orb_cv.cpp)
target_link_libraries(orb_cv ${OpenCV_LIBS})