cmake_minimum_required(VERSION 3.24)
project(rgbd)

set(CMAKE_CXX_STANDARD 17)
set(OpenCV_DIR /usr/local/share/OpenCV)
find_package(OpenCV REQUIRED)
#include_directories(${OpenCV_INCLUDE_DIRS})
find_package(Pangolin REQUIRED)
find_package(Sophus REQUIRED)
#include_directories(${Pangolin_INCLUDE_DIRS})
add_executable(jointMap jointMap.cpp)
target_link_libraries(jointMap ${OpenCV_LIBS})
target_link_libraries(jointMap ${Pangolin_LIBRARIES})
target_link_libraries(jointMap ${Sophus_LIBS} fmt)