cmake_minimum_required(VERSION 3.24)
project(stereoVision)

set(CMAKE_CXX_STANDARD 17)
set(OpenCV_DIR /usr/local/share/OpenCV)
find_package(OpenCV REQUIRED)
#include_directories(${OpenCV_INCLUDE_DIRS})
find_package(Pangolin REQUIRED)
#include_directories(${Pangolin_INCLUDE_DIRS})
add_executable(stereoVision stereoVision.cpp)
target_link_libraries(stereoVision ${OpenCV_LIBS})
target_link_libraries(stereoVision ${Pangolin_LIBRARIES})